RESOLVED FIXED38976
fast/css/pseudo-cache-stale.html has incorrect results
https://bugs.webkit.org/show_bug.cgi?id=38976
Summary fast/css/pseudo-cache-stale.html has incorrect results
Dave Hyatt
Reported 2010-05-11 23:52:32 PDT
The enclosing block is not becoming the correct size because when first-line styles change that should cause a layout to happen, nothing actually happens.
Attachments
Fix the issue (3.18 KB, patch)
2010-05-11 23:55 PDT, Dave Hyatt
no flags
Patch (39.51 KB, patch)
2010-05-12 10:59 PDT, James Robinson
eric: review+
Dave Hyatt
Comment 1 2010-05-11 23:55:47 PDT
Created attachment 55810 [details] Fix the issue
Maciej Stachowiak
Comment 2 2010-05-11 23:56:58 PDT
Comment on attachment 55810 [details] Fix the issue r=me
Maciej Stachowiak
Comment 3 2010-05-12 00:00:18 PDT
Comment on attachment 55810 [details] Fix the issue r=me
Dave Hyatt
Comment 4 2010-05-12 00:01:47 PDT
Fixed in r59211.
mitz
Comment 5 2010-05-12 00:06:32 PDT
How come pixel results were always correct?
Eric Seidel (no email)
Comment 6 2010-05-12 01:01:28 PDT
This caused a test failure on Qt. I assume the Qt results just need an update? http://build.webkit.org/results/Qt%20Linux%20Release/r59212%20(11625)/fast/css/pseudo-cache-stale-pretty-diff.html
Csaba Osztrogonác
Comment 7 2010-05-12 01:14:00 PDT
(In reply to comment #6) > This caused a test failure on Qt. I assume the Qt results just need an update? > http://build.webkit.org/results/Qt%20Linux%20Release/r59212%20(11625)/fast/css/pseudo-cache-stale-pretty-diff.html Yes, it needs an update. I'll commit it immediately.
Csaba Osztrogonác
Comment 8 2010-05-12 01:31:42 PDT
(In reply to comment #6) Qt specific expected file updated: http://trac.webkit.org/changeset/59214
James Robinson
Comment 9 2010-05-12 10:52:40 PDT
The pixel test results were not previously correct, we just had the old (incorrect) behavior baked into the expectations. Currently this test fails pixel tests. It just needs a new baseline. I'll upload one momentarily.
James Robinson
Comment 10 2010-05-12 10:59:42 PDT
James Robinson
Comment 11 2010-05-12 11:00:54 PDT
D'oh, webkit-patch marked the old one as obsolete. Anyway, can I get a rubber-stamp on the new pixel baselines?
Eric Seidel (no email)
Comment 12 2010-05-12 12:17:18 PDT
Comment on attachment 55869 [details] Patch LGTM. You can always pass --no-obsolete in that case. :) pseudo-cache-stale-expected.png doesn't look very good with teh form on top of the second sentence. Is that expected?
James Robinson
Comment 13 2010-05-12 12:20:53 PDT
I think you're looking at the before. The next expected.png does not have the form control on top of the text (that's what Hyatt's patch fixed).
Eric Seidel (no email)
Comment 14 2010-05-12 12:22:24 PDT
Ah yes, thanks.
James Robinson
Comment 15 2010-05-12 12:55:27 PDT
Comment on attachment 55869 [details] Patch Landed http://trac.webkit.org/changeset/59251 (the bad ChangeLog changes fixed in the next rev).
WebKit Review Bot
Comment 16 2010-05-12 13:31:17 PDT
http://trac.webkit.org/changeset/59252 might have broken GTK Linux 64-bit Release The following changes are on the blame list: http://trac.webkit.org/changeset/59252 http://trac.webkit.org/changeset/59253
Note You need to log in before you can comment on or make changes to this bug.