https://bugs.webkit.org/show_bug.cgi?id=38976, fast/css/pseudo-cache-stale.html has incorrect results.

Reviewed by Maciej Stachowiak.

Make sure to trigger a relayout of any objects whose first-line styles change dynamically.

* dom/Element.cpp:
(WebCore::Element::pseudoStyleCacheIsInvalid):



Canonical link: https://commits.webkit.org/50449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59211 268f45cc-cd09-0410-ab3c-d52691b4dbfc